--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,13 +1,172 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --light: #fafafa;
+  --dark: #000;
+  --error: rgb(228, 46, 1);
+  --spacing-one: calc(1rem * 0.5);
+  --spacing-two: calc(1rem);
+  --spacing-five: calc(2.5rem);
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  min-height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  line-height: 1.5;
+  font-size: 40px;
+  letter-spacing: .1em;
+  font-family: 'Catamaran', sans-serif;
+}
+
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.nav-link {
+	border-radius: 5px;
+	color: var(--light);
+	padding: 2px 4px;
+	margin-left: 2px;
+	margin-right: 2px;
+  padding-top: 2px;
+  font-size: 15px;	
+  text-decoration: none;
+  text-shadow: 2px 2px  var(--dark);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.nav-linkActive {
+  border-radius: 5px;
+	color: var(--dark);
+	padding: 2px 4px;
+	margin-left: 2px;
+	margin-right: 2px;
+  padding-top: 2px;
+  font-size: 15px;	
+  text-decoration: none;
+  background-color: rgba(241, 241, 241, 0.795);
+  font-style: italic;
+}
+
+ul.noBullets{
+  list-style-type: none;
+  margin-left: auto;
+
+}
+
+h1{
+  font-size: medium;
+  margin-left: 10px;
+}
+
+.headerPhone {
+  font-size: small;
+  margin-left: 20px;
+}
+
+.container {
+  height: 200px;
+  position: relative;
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.navButton {
+  margin-top: 28px;
+  margin-left: 2px;
+	margin-right: 2px;
+  height: 21px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f3f3f3;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+ul.dropdown-list{
+  list-style: none;
+  padding-left: 0;
+}
+
+ul.dropdown-list li {
+  font-size: small;
+}
+
+.navDropdownLink{
+  text-decoration: none;
+  color: black;
+}
+
+.more-button {
+  border-radius: 5px;
+	color: var(--light);
+	padding: 2px 4px;
+	margin-left: 2px;
+	margin-right: 2px;
+  padding-top: 2px;
+  font-size: 15px;	
+  text-decoration: none;
+  text-shadow: 2px 2px  var(--dark);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.navDropdownLink:hover{
+  text-decoration: underline;
+}
+
+.getInTouchButton {
+  border-radius: 10px;
+  border: solid 2px black;
+  height: 29px;
+	color: black;
+	padding: 2px 4px;
+  margin-top: 24px;
+	margin-left: 2px;
+	margin-right: 2px;
+  font-size: 15px;
+  text-decoration: none;	
+}
+
+.getInTouchButton:hover {
+  border-radius: 10px;
+  border: solid 2px black;
+  height: 29px;
+	color: rgb(255, 255, 255);
+  background-color: black;
+	padding: 2px 4px;
+  margin-top: 24px;
+	margin-left: 2px;
+	margin-right: 2px;
+  font-size: 15px;
+  text-decoration: none;	
 }
