--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -29,8 +29,13 @@ body {
 
 h3{
   margin-left: 20px;
-  font-size: 13px;
+  font-size: 11px;
 }
+
+.phone-span {
+  margin-left: 40px;
+}
+
 .contact-header{
   margin: auto;
   align-items: center;
@@ -174,11 +179,10 @@ ul.dropdown-list{
 }
 
 .getInTouchButton {
-  border-radius: 10px;
+  border-radius: 20px;
   border: solid 2px black;
-  height: 29px;
 	color: black;
-	padding: 2px 4px;
+	padding: 10px 4px;
   margin-top: 24px;
 	margin-left: 2px;
 	margin-right: 2px;
@@ -187,12 +191,12 @@ ul.dropdown-list{
 }
 
 .getInTouchButton:hover {
-  border-radius: 10px;
+  transition: background-color 1s ease-out;
+  border-radius: 20px;
   border: solid 2px black;
-  height: 29px;
 	color: rgb(255, 255, 255);
   background-color: black;
-	padding: 2px 4px;
+	padding: 10px 4px;
   margin-top: 24px;
 	margin-left: 2px;
 	margin-right: 2px;
