minor css changes to contact form

--- a/my-app/src/components/Contact/contact.css
+++ b/my-app/src/components/Contact/contact.css
@@ -18,7 +18,7 @@ h2 {
 
 .halfInput {
     width: 30%;
-    padding: 10px;
+    height: 40px;
     margin: 10px;
     border: none;
     border-bottom: black solid 1px;
@@ -26,7 +26,7 @@ h2 {
 
 .fullInput {
    width: 62%;
-   padding: 10px;
+   height: 40px;
    border: none;
    border-bottom: black solid 1px;
 }
@@ -34,7 +34,6 @@ h2 {
 textarea{
     margin-top: -58px;
     width: 62%;
-    padding: 20px;
     border: none;
     border-bottom: black solid 1px;
 }
@@ -58,4 +57,11 @@ fieldset {
     background-color: white;
     border-radius: 10px;
     cursor: pointer;
+}
+
+.errorText {
+    color: red;
+    font-size: 18px;
+    margin-top: -20px;
+    margin-bottom: 0px;
 }
