--- a/my-app/src/components/Contact/contact.css
+++ b/my-app/src/components/Contact/contact.css
@@ -2,6 +2,10 @@ section {
     text-align: center;
 }
 
+.contact-infoWrapper{
+    background-color: var(--secondary);
+}
+
 .contact-info {
     font-size: 13px;
 }
@@ -14,6 +18,7 @@ h2 {
     font-size: 35px;
     margin-top: 10px;
     margin-bottom: 0px;
+    font-family: 'Cormorant SC', serif;
 }
 
 .halfInput {
@@ -57,6 +62,13 @@ fieldset {
     background-color: white;
     border-radius: 10px;
     cursor: pointer;
+    box-shadow: 0 9px #999;
+}
+
+.submitButton:active {
+    background-color: white;
+    box-shadow: 0 5px rgb(68, 67, 67);
+    transform: translateY(4px);
 }
 
 .errorText {
