--- a/my-app/src/pages/Modal/modal.css
+++ b/my-app/src/pages/Modal/modal.css
@@ -1,28 +1,20 @@
-.modalBackground {
-    width: 100%;
-    height: 110%;
-    background-color: black;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: -350px;
-}
-
 .exitImgBtn {
-    width: 100%;
-    height: 40px;
-    margin-bottom: 10px;
-    background-color: white;
-    border-radius: 10px;
-    font-size: 20px;
+    width: 50%;
+    height: 35px;
+    background-color: rgb(31,31,31);
+    border-radius: 20px;
+    font-size: 60%;
+    color: var(--light);
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
-.modalImage {
-    object-fit: none;
-    width: none;
-    height: none;
-    border: none;
-    border-radius: none;
+.exitImgBtn:hover {
+    font-style: italic;
+}
+
+.modalImage{
+    object-fit: cover;
+    width: 50%;
+    height: 70%;
 }
