have contact form working on autofill, still not collecting data for name and email on physical text input

--- a/my-app/src/components/Contact/contact.css
+++ b/my-app/src/components/Contact/contact.css
@@ -36,7 +36,7 @@ textarea {
 }
 
 .contactCard {
-    background: url("../../assets/backgroundImages/pic3.JPG");
+    background: url("../../assets/backgroundImages/pic1.JPG");
     background-size: cover;
     width: 100%;
     height: auto;
@@ -116,6 +116,13 @@ fieldset {
     font-style: italic;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: #fff !important;
+}
 
   
 
