updated header/footer logo and created wedding service page

--- a/my-app/src/components/Services/services.css
+++ b/my-app/src/components/Services/services.css
@@ -18,11 +18,12 @@
 
 .collectionText {
     position: relative;
-    width: 30%;
+    width: 340px;
 }
 
 .collectionTitle {
     margin-left: 20px;
+    padding-right: 10px;
 }
 
 .collectionPrice {
