--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -6,6 +6,7 @@
   --secondary: #f7d6bd;
   --terciary: #db9a68;
   --quartinary: #ad704f;
+  --activeLink: #CBBCAB;
   --background: #E3E2DE;
   --borderColor: #858568;
   --footerColor: rgb(31,31,31);
