--- a/my-app/src/components/Home/home.css
+++ b/my-app/src/components/Home/home.css
@@ -34,9 +34,10 @@
 
 .referenceName {
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
-.referenceName:hover {
+.referenceName:hover{
     font-style: italic;
 }
 
@@ -51,6 +52,8 @@
 }
 
 .referenceTitleName {
+    margin-top: -15px;
+    margin-bottom: -15px;
     font-size: 25px;
     text-decoration: underline black 2px;
 }
