--- a/my-app/src/components/Nav/nav.css
+++ b/my-app/src/components/Nav/nav.css
@@ -1,3 +1,11 @@
+.headerImg {
+    margin-top: 0;
+    margin-left: -20px;
+    margin-right: -20px;
+    width:400px;
+    height: auto;
+}
+
 .navBar {
     justify-content: center;
     background-color: var(--secondary);
