created maternity page. fixed contact form but had to remove validators.

--- a/my-app/src/components/Home/home.css
+++ b/my-app/src/components/Home/home.css
@@ -64,3 +64,16 @@
     width: 350px;
 }
 
+.referenceNameActive {
+    color: blue;
+}
+
+.referenceNameActive {
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+.referenceNameActive:hover{
+    font-style: italic;
+}
+
