--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -50,12 +50,13 @@ h2 {
   padding-top: 10px;
   margin-top: 0;
   margin-bottom: 0px;
-  font-family: 'Josefin Slab', serif;
+  font-family:'Raleway', sans-serif;
   text-align: center;
 }
 
 h3 {
   font-size: 40px;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 .hambergerMenu {
