--- a/my-app/src/components/Home/home.css
+++ b/my-app/src/components/Home/home.css
@@ -4,24 +4,31 @@
 }
 
 .homeTitle {
-    text-align: center;
+    position: absolute;
+    left: 45%;
+    right: 50%;
+    top: 0;
 }
 
 .reviewsTitle {
-    margin-bottom: -15px;
-    
+    margin-bottom: 5px;
+    margin-top: -20px !important;
+    margin-left: -30%;
 }
 
 .referenceWrapper {
     text-align: center;
+
 }
 
 .referenceCardWrapper {
-    margin: auto;
+    margin-left: 5%;
+    margin-top: -15px;
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: var(--secondary);
     width: 900px;
+    border: solid var(--activeLink);
 }
 
 .references {
@@ -75,3 +82,32 @@
     cursor: pointer;
 }
 
+img {
+    object-fit: cover !important;
+    width: 100%;
+}
+
+.home-carousel .rec-carousel {
+    margin-top: 0px;
+    width: 102%;
+}
+
+.home-carousel .rec-arrow {
+    display: none !important;
+}
+
+.home-carousel {
+    position: relative;
+}
+
+.text-wrapper {
+    background-color: var(--secondary);
+    text-align: center;
+    width: 30%;
+    font-size: 18px;
+    padding: 10px 20px;
+    margin-left: 65%;
+    margin-top: -40px;
+    border: solid var(--activeLink);
+    
+}
