fixed seniors service page for mobile

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -224,6 +224,7 @@ h3 {
 
 .collectionPhoneTitle {
     margin-left: 20px!important;
+    margin-top: -5px!important;
     padding-right: 10px!important;
 }
 
